prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/extends_kw_pragma.diag.txt
ERROR: Old-style class inheritance using 'extends' keyword is forbidden. Use `class D (B) {}` syntax
testData/diagnostics/extends_kw_pragma.nut.txt:16:9

class D5 extends B { } // EXPECTED
         ^------


